# School-Management

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sample_outputs.py  sample_payloads.py
alembic/: env.py
app/: __init__.py  main.py  utils.py
app/config/: settings.py
app/constants/: __init__.py  decorators.py  enums.py  messages.py
app/database/: connection.py  sql_operations.py
app/decorators/: __init__.py  auth.py
app/kafka/: __init__.py  admin.py  consumer.py  kafka_client.py  producer.py
app/kafka/consumers/: __init__.py  base_consumer.py  consumer_manager.py  email_consumer.py  sms_consumer.py  whatsapp_consumer.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  base.py  user.py
app/routes/: __init__.py  auth.py  bulk_notification.py  health.py  notification.py  users.py
app/schemas/: auth.py  bulk_notification.py  notification.py  user.py
app/service_managers/: __init__.py  auth_service.py  bulk_notification_service.py  notification_service.py  user_service.py
app/utils/: dependencies.py
tests/: conftest.py  test_auth.py  test_health.py
